--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <section class="textos-header">
             <h1>INTEGRACIÓN DE SISTEMAS Y ARQUITECTURAS</h1>
-            <h2>PROYECTO CUBO LED & SP32</h2>
+            <h2>PROYECTO CUBO LED & ESP32</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
