--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         function command(value) {
             console.log(value);
             message = new Paho.MQTT.Message(value + "");
-            message.destinationName = "entradaDAP";
+            message.destinationName = "entrada";
             client.send(message);
         }
 
@@ -133,7 +133,7 @@
                         <img src="img/img1.jpg" alt="">
                         <div class="hover-galeria">
 
-                            <img src="img/icono1.png" alt="" onclick="command(0)">
+                            <img src="img/icono1.png" alt="" onclick="command(a)">
                             <p>Cargar</p>
                             
                         </div>
@@ -141,49 +141,49 @@
                     <div class="imagen-port">
                         <img src="img/img2.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(1)">
+                            <img src="img/icono1.png" alt="" onclick="command(b)">
                             <p>Cargar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/img3.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(2)">
+                            <img src="img/icono1.png" alt="" onclick="command(c)">
                             <p>Cargar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/img1.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(3)">
+                            <img src="img/icono1.png" alt="" onclick="command(d)">
                             <p>Cargar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/img4.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(4)">
+                            <img src="img/icono1.png" alt="" onclick="command(e)">
                             <p>Cargar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/img5.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(5)">
+                            <img src="img/icono1.png" alt="" onclick="command(f)">
                             <p>Cargar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/img6.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(6)">
+                            <img src="img/icono1.png" alt="" onclick="command(g)">
                             <p>Cargar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img src="img/img7.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="" onclick="command(7)">
+                            <img src="img/icono1.png" alt="" onclick="command(h)">
                             <p>Cargar</p>
                         </div>
                     </div>
