--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             <h2 class="titulo">Integrantes</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="img/face1.jpg" alt="">
+                    <img src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/daniel.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Daniel Antonio Poblano</h4>
                         
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/face2.jpg" alt="">
+                    <img src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/david.jpeg" alt="">
                     <div class="contenido-texto-card">
                         <h4>David Hernandez Vazquez</h4>
                         
