--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="img/iconoPestaña.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -130,7 +130,7 @@
          <img class="card-img-top img-fluid" src="images/fondo-1.png" alt="Card image cap">
          <div class="card-block">
            <h4 class="card-title">ENCENDER</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta función se encarga de prender todo el cubo, dandole a las columnas carga LOW y a los niveles HIGH.</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('a')" type="button" >Encender</button>
@@ -141,7 +141,7 @@
 
          <div class="card-block">
            <h4 class="card-title">APAGAR</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta función se encarga de apagar todo el cubo, dandole a las columnas carga HIGH y a los niveles LOW.</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('b')" type="button" >Apagar</button>
@@ -152,7 +152,7 @@
 
          <div class="card-block">
            <h4 class="card-title">SECUENCIA</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta funcion se encarga de ir prendiendo los 4 leds de la primera fila y de ahi se pasa a la segunda hasta terminar una cara del cubo, una vez que hizo el recorrido, empieza con la segunda con la misma idea pero de abajo a arriba.</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('c')" type="button" >Secuencia</button>
@@ -167,7 +167,7 @@
          <img class="card-img-top img-fluid" src="images/fondo-1.png" alt="Card image cap">
          <div class="card-block">
            <h4 class="card-title">ESPIRAL</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta funcion trabaja por columnas, en un principio se ejecuta la funcion de prender cubo y va de adentro a afueraa apagandolo, una vez que haya terminado el recorrido, lo empieza de afuera a adentro.</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('d')" type="button" >Espiral</button>
@@ -177,7 +177,7 @@
          <img class="card-img-top img-fluid" src="images/fondo-1.png" alt="Card image cap">
          <div class="card-block">
            <h4 class="card-title">FLASH</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta función se encarga de prender aleaoriamente leds a lo largo del cubo</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('e')" type="button" >Flash</button>
@@ -187,7 +187,7 @@
          <img class="card-img-top img-fluid" src="images/fondo-1.png" alt="Card image cap">
          <div class="card-block">
            <h4 class="card-title">ARRIBA Y ABAJO</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta función se encarga de recorrer de una esquina a la esquina contraria del cubo haciendo un camino que se prende y acaba, de ida y vuelta.</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('f')" type="button" >Arriba y Abajo</button>
@@ -202,7 +202,7 @@
          <img class="card-img-top img-fluid" src="images/fondo-1.png" alt="Card image cap">
          <div class="card-block">
            <h4 class="card-title">PARPADEO</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta función se encarga de prender y apagar el cubo repetidas veces</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('g')" type="button" >Parpadeo</button>
@@ -212,7 +212,7 @@
          <img class="card-img-top img-fluid" src="images/fondo-1.png" alt="Card image cap">
          <div class="card-block">
            <h4 class="card-title">ZIC ZAC</h4>
-           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text">Esta funcion se encarga de crear en si una "vibora" que recorre de un lado a otro del cubo.</p>
          </div>
          <div class = "btn-group">
            <button onclick="command('h')" type="button" >Zic Zac</button>
