--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     type="image/x-icon"
   ></link>
 
-  <!-- href="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/css/estilos.css" -->
+  <!-- href="estilos.css" -->
 
   <link
-    rel="stylesheet"
-    href="estilos.css"
+  rel="stylesheet"
+  href="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/css/estilos.css"
   ></link>
 
   <link
