--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <h5 class="card-title">Explosiones</h5>
 
               <p class="card-text">
-                Esta aniamcion prende los leds aleatoriamente en forma de explosion.
+                Esta animacion prende los leds aleatoriamente en forma de explosion.
               </p>
 
               <div class="d-grid gap-2">
@@ -408,7 +408,7 @@
             <div class="card-body">
               <h5 class="card-title">ZIC ZAC</h5>
 
-              <p class="card-text">Eta animacion prende los leds en forma de zic zac de izqiuierda a derecha.</p>
+              <p class="card-text">Eta animacion prende los leds en forma de zic zac de izquierda a derecha.</p>
 
               <div class="d-grid gap-2">
                 <button
