--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <div class="card-body">
               <h5 class="card-title">ZIC ZAC</h5>
 
-              <p class="card-text">Eta animacion prende los leds en forma de zic zac de izquierda a derecha.</p>
+              <p class="card-text">Esta animacion prende los leds en forma de zic zac de izquierda a derecha.</p>
 
               <div class="d-grid gap-2">
                 <button
