--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <h5 class="card-title">Encender</h5>
 
               <p class="card-text">
-                Esta animacion enciende todo el cubo.
+                Esta animación enciende todo el cubo.
               </p>
 
               <div class="d-grid gap-2">
@@ -180,7 +180,7 @@
               <h5 class="card-title">Apagar</h5>
 
               <p class="card-text">
-                Esta animacion apaga todo el cubo.
+                Esta animación apaga todo el cubo.
               </p>
 
               <div class="d-grid gap-2">
@@ -218,7 +218,7 @@
               <h5 class="card-title">Secuencial</h5>
 
               <p class="card-text">
-                Esta animacion prende y apaga los leds de forma secuencial.
+                Esta animación prende y apaga los leds de forma secuencial.
               </p>
 
               <div class="d-grid gap-2">
@@ -256,7 +256,7 @@
               <h5 class="card-title">Espiral</h5>
 
               <p class="card-text">
-                Esta animacion dibuja una espiral.
+                Esta animación dibuja una espiral.
               </p>
 
               <div class="d-grid gap-2">
@@ -299,7 +299,7 @@
               <h5 class="card-title">Explosiones</h5>
 
               <p class="card-text">
-                Esta animacion prende los leds aleatoriamente en forma de explosion.
+                Esta animación prende los leds aleatoriamente en forma de explosion.
               </p>
 
               <div class="d-grid gap-2">
@@ -336,7 +336,7 @@
             <div class="card-body">
               <h5 class="card-title">Sube y baja</h5>
 
-              <p class="card-text">Esta animacion prende todos los leds de ariba a bajo y viceversa.</p>
+              <p class="card-text">Esta animación prende todos los leds de ariba a bajo y viceversa.</p>
 
               <div class="d-grid gap-2">
                 <button
@@ -372,7 +372,7 @@
             <div class="card-body">
               <h5 class="card-title">Parpadeo</h5>
 
-              <p class="card-text">Esta animacion prende y apaga los leds haciendo efecto de parpadeo.</p>
+              <p class="card-text">Esta animación prende y apaga los leds haciendo efecto de parpadeo.</p>
 
               <div class="d-grid gap-2">
                 <button
@@ -408,7 +408,7 @@
             <div class="card-body">
               <h5 class="card-title">ZIC ZAC</h5>
 
-              <p class="card-text">Esta animacion prende los leds en forma de zic zac de izquierda a derecha.</p>
+              <p class="card-text">Esta animación prende los leds en forma de zic zac de izquierda a derecha.</p>
 
               <div class="d-grid gap-2">
                 <button
