--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/integrantes/david.jpeg">
 
             <div class="contenido-texto-card">
-              <h5>David Hernandez Vazquez</h5>
+              <h5>David Hernández Vázquez</h5>
             </div>
           </div>
 
