--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/Prender.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/Prender.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -170,7 +170,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/apagar.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/apagar.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -208,7 +208,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/secuencial.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/secuencial.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -246,7 +246,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/espiral.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/espiral.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -289,7 +289,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/explociones.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/explociones.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -327,7 +327,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/sube+y+baja.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/sube+y+baja.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -363,7 +363,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/parpadeo.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/parpadeo.gif"
                   type="video/mp4"
                 ></source>
               </video>
@@ -399,7 +399,7 @@
                 preload="none"
               >
                 <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/videos/ziczac.mp4"
+                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/ziczac.gif"
                   type="video/mp4"
                 ></source>
               </video>
