--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <!-- href="estilos.css" -->
 
   <link
-  rel="stylesheet"
-  href="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/css/estilos.css"
+    rel="stylesheet"
+    href="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/css/estilos.css"
   ></link>
 
   <link
@@ -125,18 +125,11 @@
           <div class="card">
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
-            <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/Prender.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
-            </div>
+            <img
+              src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/Prender.gif"
+              width="100%"
+              style="border-radius: 5px;"
+            >
 
             <div class="card-body">
               <h5 class="card-title">Encender</h5>
@@ -164,16 +157,11 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
+              <img
+                src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/apagar.gif"
+                width="100%"
+                style="border-radius: 5px;"
               >
-                <source
-                  src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/apagar.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
             </div>
 
             <div class="card-body">
@@ -202,16 +190,11 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
+                <img
                   src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/secuencial.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
+                  width="100%"
+                  style="border-radius: 5px;"
+                ></img>
             </div>
 
             <div class="card-body">
@@ -240,16 +223,11 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
+                <img
                   src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/espiral.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
+                  width="100%"
+                  style="border-radius: 5px;"
+                ></img>
             </div>
 
             <div class="card-body">
@@ -283,16 +261,11 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
+                <img
                   src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/explociones.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
+                  width="100%"
+                  style="border-radius: 5px;"
+                ></img>
             </div>
 
             <div class="card-body">
@@ -321,22 +294,19 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
+                <img
                   src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/sube+y+baja.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
+                  width="100%"
+                  style="border-radius: 5px;"
+                ></img>
             </div>
 
             <div class="card-body">
               <h5 class="card-title">Sube y baja</h5>
 
-              <p class="card-text">Esta animación prende todos los leds de ariba a bajo y viceversa.</p>
+              <p class="card-text">
+                Esta animación prende todos los leds de ariba a bajo y viceversa.
+              </p>
 
               <div class="d-grid gap-2">
                 <button
@@ -357,22 +327,19 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
+                <img
                   src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/parpadeo.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
+                  width="100%"
+                  style="border-radius: 5px;"
+                ></img>
             </div>
 
             <div class="card-body">
               <h5 class="card-title">Parpadeo</h5>
 
-              <p class="card-text">Esta animación prende y apaga los leds haciendo efecto de parpadeo.</p>
+              <p class="card-text">
+                Esta animación prende y apaga los leds haciendo efecto de parpadeo.
+              </p>
 
               <div class="d-grid gap-2">
                 <button
@@ -393,22 +360,19 @@
             <!-- <img src="fondo.jpg" class="card-img-top"> -->
 
             <div class="video">
-              <video
-                muted="muted"
-                loop="loop"
-                preload="none"
-              >
-                <source
+                <img
                   src="https://bucket-dany.s3.amazonaws.com/imagenes-Iot/gif/ziczac.gif"
-                  type="video/mp4"
-                ></source>
-              </video>
+                  width="100%"
+                  style="border-radius: 5px;"
+                ></img>
             </div>
 
             <div class="card-body">
               <h5 class="card-title">ZIC ZAC</h5>
 
-              <p class="card-text">Esta animación prende los leds en forma de zic zac de izquierda a derecha.</p>
+              <p class="card-text">
+                Esta animación prende los leds en forma de zic zac de izquierda a derecha.
+              </p>
 
               <div class="d-grid gap-2">
                 <button
@@ -494,18 +458,6 @@
         message.destinationName = 'Entrada';
         client.send(message);
       }
-  </script>
-
-  <script>
-    var figure = $(".video").hover( hoverVideo, hideVideo );
-
-function hoverVideo(e) {
-    $('video', this).get(0).play();
-}
-
-function hideVideo(e) {
-    $('video', this).get(0).pause();
-}
   </script>
 </body>
 </html>
